fixing gap between clips and services font and font size

--- a/src/components/general/Clip/clip.module.css
+++ b/src/components/general/Clip/clip.module.css
@@ -4,7 +4,6 @@
   border-radius: 4px;
   display: inline-block;
   padding: 2px 8px;
-  margin: 15px 10px 0 0;
 }
 
 .clip_text {
