--- a/src/components/main/Education/education.module.css
+++ b/src/components/main/Education/education.module.css
@@ -77,6 +77,7 @@
 .educarion_clip_container {
   display: flex;
   flex-wrap: wrap;
+  gap: 12px;
 }
 
 @media screen and (max-width: 1023px) {
