--- a/src/components/main/WorkExperience/work-experience.module.css
+++ b/src/components/main/WorkExperience/work-experience.module.css
@@ -82,6 +82,7 @@
   align-items: center;
   display: flex;
   flex-wrap: wrap;
+  gap: 12px;
   justify-content: flex-start;
 }
 .work_experience_spliter {
